# mac-activity-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  HANDOFF_BRIEF.md  Makefile  PRIVACY.md  README.md  SECURITY.md  build_dashboard.py  categories.py  dashboard.sample.html  pyproject.toml  requirements-dev.txt  tracker.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
packaging/: applet.applescript.tmpl  build_app.sh  com.example.activityreview.calendar.plist  com.example.activityreview.plist
sample/: build_sample_data.py  sample_data.json
sample/history/: 2026-05-26.json  2026-06-09.json  2026-06-23.json  2026-07-06.json
scripts/: focus.sh  focus_apps.py  focus_blocklist.py  focus_session.sh  install.sh  run_review.sh
templates/: dashboard.html.tmpl
tests/: conftest.py  test_build_dashboard.py  test_focus_apps.py  test_focus_mode.py  test_tracker.py
